samples/_failures_safe/1761273907_ee92d2_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_4949f687.c: In function ‘main’:
./samples/SAFE/__tmp_4949f687.c:163:20: error: missing terminating " character
  163 |             printf("Invalid edge parameters. Source and destination must be
      |                    ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_4949f687.c:163:13: error: expected expression at end of input
  163 |             printf("Invalid edge parameters. Source and destination must be
      |             ^~~~~~
./samples/SAFE/__tmp_4949f687.c:163:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_4949f687.c:163:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_4949f687.c:163:13: error: expected declaration or statement at end of input
